--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,20 +14,23 @@ on:
       - '.github/workflows/*.yml'
 jobs:
   test:
+    defaults:
+      run:
+        working-directory: '.'
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macOS-latest
+          - ubuntu-20.04
+          - macOS-12
         swift-compat-ver:
           - '5'
           # - '4.2'
           # - '4'
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Use a cache for ".build" directory.
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       with:
         path: .build
         key: build-${{ github.workspace }}-${{ runner.os }}-${{ matrix.swift-compat-ver }}-${{ hashFiles('**/*.swift') }}
@@ -35,31 +38,26 @@ jobs:
           build-${{ github.workspace }}-${{ runner.os }}-${{ matrix.swift-compat-ver }}-
           build-${{ github.workspace }}-${{ runner.os }}-
           build-${{ github.workspace }}-
-    - uses: YOCKOW/Action-setup-swift@master
+    - uses: YOCKOW/Action-setup-swift@main
       with:
-        swift-version: '5.3.2'
+        swift-version: '5.7'
     # DEBUG mode
-    - name: Try to build products with debug mode.
-      id: debug_build
-      run: swift build --configuration debug -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
-      continue-on-error: true
-    - name: Clean debug build directory if necessary
-      if: steps.debug_build.outcome == 'failure'
-      run: rm -rf $(cd .build/debug && pwd -P)
-    - name: Check XCTestManifests.swift
-      if: runner.os == 'macOS'
-      run: |
-        swift test --generate-linuxmain -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
-        git diff --exit-code
     - name: Test with debug mode.
+      id: debug_test
       run: swift test --configuration debug -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
-    # RELEASE mode
-    - name: Try to build products with release mode.
-      id: release_build
-      run: swift build --configuration release -Xswiftc -enable-testing -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
       continue-on-error: true
-    - name: Clean release build directory if necessary
-      if: steps.release_build.outcome == 'failure'
-      run: rm -rf $(cd .build/release && pwd -P)
+    - name: Retry test with debug mode if necessary
+      if: steps.debug_test.outcome == 'failure'
+      run: |
+        rm -rf $(cd .build/debug && pwd -P)
+        swift test --configuration debug -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
+    # RELEASE mode
     - name: Test with release mode.
+      id: release_test
       run: swift test --configuration release -Xswiftc -enable-testing -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
+      continue-on-error: true
+    - name: Retry test with release mode if necessary
+      if: steps.release_test.outcome == 'failure'
+      run: |
+        rm -rf $(cd .build/release && pwd -P)
+        swift test --configuration release -Xswiftc -swift-version -Xswiftc ${{ matrix.swift-compat-ver }}
